Added Spawn area config option